modules/cli/src/test/resources/bad/syntax/disamb/doarglistdel/DoArgList02.scr
module bad.syntax.disamb.doarglist.DoArgList02;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do Bar(A, B);
}

global protocol Bar(role C, role D, role E)
{
	1() from C to D;
	2() from D to E;
}
